src/test/deca/context/invalid/created/mauvais-return.deca
class A{
    int getX(){
        print("nothing");
    }
}